## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = spod2html

spod2html_SOURCES = \
	hoptions.cxx \
	spod2html.cxx \
	spod_html.cxx \
	spod_parser.cxx \
	config.h \
	harray.h \
	hoptions.h \
	spod_html.h \
	spod_parser.h

spod2html_LDFLAGS = 

spod2html_LDADD = 

